fix: remove overflow on ipad

--- a/frontend/src/styles/LoginForm.scss
+++ b/frontend/src/styles/LoginForm.scss
@@ -1,9 +1,8 @@
 .form-container {
   margin-left: 2.5%;
   margin-right: 2.5%;
+  margin-top: 2%;
   color: #b8c0e0;
-  position: absolute;
-  top: 20%;
 
   & > .description {
     display: flex;
@@ -98,7 +97,7 @@
         background-color: transparent;
         padding: 1%;
         font-size: clamp(15px, 3rem, 3vh);
-        margin: 1.5% 0px;
+        margin: 1% 0px;
         outline: none;
         border: 2px solid;
         border-image: var(--text-gradient) 1;
@@ -120,7 +119,7 @@
           border-radius: 10px;
           background-color: transparent;
           padding: 1.25%;
-          font-size: clamp(15px, 3rem, 3vh);
+          font-size: clamp(15px, 3rem, 3vmin);
           margin: 1.5%;
           outline: none;
           border: 2px solid var(--highlight-blue);
